--- a/sale/index.html
+++ b/sale/index.html
@@ -2,11 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <meta http-equiv="refresh" content="0; URL=https://www.wp-data.com/kr/">
+    <meta http-equiv="refresh" content="0; URL=https://www.wpsalenow.com/kr/">
     <!-- <meta name="robots" content="noindex, nofollow"> -->
-    <title>WordPress Korea Online - WP-KR.COM</title>
+    <title>WordPress Sale Now - WP-KR.COM</title>
 		<link rel="shortcut icon" type="image/x-icon" href="./../assets/img/favicon.ico"/>
-    <meta name="description" content="WordPress Korea Online - WP-KR.COM">
+    <meta name="description" content="WordPress Sale Now - WP-KR.COM">
     <meta name="keywords" content="WordPress, WP, Theme, Plugin, Item, Child Theme, Functions, Custom, Free, Online">
     <!-- Global site tag (gtag.js; WP-KR.COM) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-XXXXXXXXXX-1"></script>
