--- a/naver-blog/index.html
+++ b/naver-blog/index.html
@@ -2,12 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <meta http-equiv="refresh" content="0; URL=https://www.wp-data.com/kr/">
+    <meta http-equiv="refresh" content="0; URL=https://blog.naver.com/wp-kr">
     <!-- <meta name="robots" content="noindex, nofollow"> -->
-    <title>워드프레스 애널리틱스 (WordPress Analytics) - WP-KR.COM</title>
+    <title>네이버 블로그 - 워드프레스 코리아(WP-KR.COM)</title>
 		<link rel="shortcut icon" type="image/x-icon" href="./../assets/img/favicon.ico"/>
-    <meta name="description" content="워드프레스 애널리틱스 (WordPress Analytics) - WP-KR.COM">
-    <meta name="keywords" content="WordPress, WP, Theme, Plugin, Item, Child Theme, Functions, Custom, Free, Online">
+    <meta name="description" content="네이버 블로그 - 워드프레스 코리아(WP-KR.COM)">
+    <meta name="keywords" content="워드프레스, 코리아, 한국, 테마, 플러그인, 호스팅, 워드프레스톡, 커스텀, 커스터마이징, 대행사, 커뮤니티, WordPress, WP, Theme, Plugin, Item, Child Theme">
     <!-- Global site tag (gtag.js; WP-KR.COM) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-XXXXXXXXXX-1"></script>
     <script>
