--- a/404.html
+++ b/404.html
@@ -29,10 +29,10 @@
       gtag('config', 'UA-XXXXXXXXXX-1');
     </script>
 		<!-- Naver Analytics(WP-KR.COM): Start -->
-    <script type="text/javascript" src="//wcs.naver.net/wcslog.js"></script>
+		<script type="text/javascript" src="//wcs.naver.net/wcslog.js"></script>
     <script type="text/javascript">
       if(!wcs_add) var wcs_add = {};
-      wcs_add["wa"] = "XXXXXXXXXX";
+      wcs_add["wa"] = "317d1cd2772ddc";
       wcs_do();
     </script>
 		<!-- Naver Analytics: End -->
