--- a/sale/index.html
+++ b/sale/index.html
@@ -9,12 +9,12 @@
     <meta name="description" content="워드프레스 실시간 할인 정보 (WordPress Sale Now) - WP-KR.COM">
     <meta name="keywords" content="워드프레스, 코리아, 한국, 테마, 플러그인, 호스팅, 워드프레스톡, 커스텀, 커스터마이징, 대행사, 커뮤니티, WordPress, WP, Theme, Plugin, Item, Child Theme">
     <!-- Global site tag (gtag.js; WP-KR.COM) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-XXXXXXXXXX-1"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-154119635-1"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-      gtag('config', 'UA-XXXXXXXXXX-1');
+      gtag('config', 'UA-154119635-1');
     </script>
 		<!-- Naver Analytics(WP-KR.COM): Start -->
     <script type="text/javascript" src="//wcs.naver.net/wcslog.js"></script>
