--- a/child-theme-builder/index.html
+++ b/child-theme-builder/index.html
@@ -9,12 +9,12 @@
     <meta name="description" content="WordPress Analytics - WP-KR.COM">
     <meta name="keywords" content="WordPress, WP, Theme, Plugin, Item, Child Theme, Functions, Custom, Free, Online">
     <!-- Global site tag (gtag.js; WP-KR.COM) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-XXXXXXXXXX-1"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-154119635-1"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-      gtag('config', 'UA-XXXXXXXXXX-1');
+      gtag('config', 'UA-154119635-1');
     </script>
 		<!-- Naver Analytics(WP-KR.COM): Start -->
     <script type="text/javascript" src="//wcs.naver.net/wcslog.js"></script>
