--- a/index.html
+++ b/index.html
@@ -1,32 +1,193 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="refresh" content="0; URL=https://www.wp-data.com/kr/">
-    <!-- <meta name="robots" content="noindex, nofollow"> -->
-    <title>워드프레스 코리아 온라인 서비스 - WP-KR.COM</title>
-		<link rel="shortcut icon" type="image/x-icon" href="./../assets/img/favicon.ico"/>
-    <meta name="description" content="워드프레스 코리아 온라인 서비스 - WP-KR.COM">
-    <meta name="keywords" content="워드프레스, 코리아, 한국, 테마, 플러그인, 호스팅, 워드프레스톡, 커스텀, 커스터마이징, 대행사, 커뮤니티, WordPress, WP, Theme, Plugin, Item, Child Theme">
-    <!-- Global site tag (gtag.js; WP-KR.COM) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-154119635-1"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-      gtag('config', 'UA-154119635-1');
-    </script>
-		<!-- Naver Analytics(WP-KR.COM): Start -->
-    <script type="text/javascript" src="//wcs.naver.net/wcslog.js"></script>
-    <script type="text/javascript">
-      if(!wcs_add) var wcs_add = {};
-      wcs_add["wa"] = "317d1cd2772ddc";
-      wcs_do();
-    </script>
-		<!-- Naver Analytics: End -->
-  </head>
-  <!-- <body>
-    <p style="margin-top:150px; text-align:center; font-family:'Helvetica', arial, sans-serif">Thank you for using WeChat Marketing Korea service.<br>Please wait for seconds.</p>
-  </body> -->
+<head>
+  <meta charset="utf-8" />
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <!-- <meta http-equiv="refresh" content="0; URL=https://www.wp-data.com/kr/"> -->
+  <!-- <meta name="robots" content="noindex, nofollow"> -->
+  <title>워드프레스 코리아 온라인 서비스 - WP-KR.COM</title>
+  <link rel="shortcut icon" type="image/x-icon" href="./../assets/img/favicon.ico"/>
+  <meta name="description" content="워드프레스 코리아 온라인 서비스 - WP-KR.COM">
+  <meta name="keywords" content="워드프레스, 코리아, 한국, 테마, 플러그인, 호스팅, 워드프레스톡, 커스텀, 커스터마이징, 대행사, 커뮤니티, WordPress, WP, Theme, Plugin, Item, Child Theme">
+  <meta property="og:title" content="워드프레스 코리아 온라인 서비스 - WP-KR.COM">
+  <meta property="og:url" content="워드프레스 코리아 온라인 서비스 - WP-KR.COM">
+  <meta property="og:site_name" content="워드프레스 코리아 온라인 서비스 - WP-KR.COM">
+  <meta property="og:description" content="워드프레스 코리아 온라인 서비스 - WP-KR.COM">
+  <meta property="og:type" content="website">
+
+  <script src="./assets-main/js/jquery-3.1.1.min.js"></script>
+  <script src="./assets-main/js/bootstrap.js"></script>
+
+  <link rel="stylesheet" href="./assets-main/css/style.css">
+  <link rel="stylesheet" href="./assets-main/css/fonts.css">
+  <link rel="stylesheet" href="./assets-main/css/bootstrap.css">
+  <link rel="stylesheet" href="./assets-main/css/home.css">
+  <link rel="stylesheet" href="./assets-main/css/vdonate.css">
+
+  <!-- Global site tag (gtag.js; WP-KR.COM) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-154119635-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'UA-154119635-1');
+  </script>
+  <!-- Naver Analytics(WP-KR.COM): Start -->
+  <script type="text/javascript" src="//wcs.naver.net/wcslog.js"></script>
+  <script type="text/javascript">
+    if(!wcs_add) var wcs_add = {};
+    wcs_add["wa"] = "317d1cd2772ddc";
+    wcs_do();
+  </script>
+  <!-- Naver Analytics: End -->
+
+</head>
+
+<body>
+
+  <header id="header">
+
+    <div id="intrologo" class="intro-logo" style="background-position:center; background-repeat:no-repeat; background-image: url(); background-size: auto 100%;">
+
+      <section class="awSlider">
+        <div class="carousel slide carousel-fade " data-ride="carousel">
+
+          <!-- Wrapper for slides -->
+          <div class="carousel-inner">
+
+            <div class="item active">
+              <img id="carousel-img0" src="https://hellotblog.files.wordpress.com/2019/06/sample-bg-01-800.jpg">
+            </div>
+
+            <script>
+              var img0 = new Image();
+              var imageTag0 = document.getElementById("carousel-img0");
+              img0.src = imageTag0.src;
+              img0.onload = function() {
+                if (img0.width / img0.height <= document.body.clientWidth / document.body.clientHeight) {
+                  imageTag0.style.width = document.body.clientWidth + "px";
+                } else {
+                  imageTag0.style.height = document.body.clientHeight + "px";
+                  imageTag0.style.marginLeft = -(document.body.clientHeight * img0.width / img0.height - document.body.clientWidth) / 2 + "px";
+                }
+              };
+            </script>
+
+            <!-- <div class="item">
+              <img id="carousel-img1" src="https://source.unsplash.com/collection/954550/1920x1081">
+            </div>
+
+            <script>
+              var img1 = new Image();
+              var imageTag1 = document.getElementById("carousel-img1");
+              img1.src = imageTag1.src;
+              img1.onload = function() {
+                if (img1.width / img1.height <= document.body.clientWidth / document.body.clientHeight) {
+                  imageTag1.style.width = document.body.clientWidth + "px";
+                } else {
+                  imageTag1.style.height = document.body.clientHeight + "px";
+                  imageTag1.style.marginLeft = -(document.body.clientHeight * img1.width / img1.height - document.body.clientWidth) / 2 + "px";
+                }
+              };
+            </script>
+
+            <div class="item">
+              <img id="carousel-img2" src="https://source.unsplash.com/collection/954550/1921x1080">
+            </div>
+
+            <script>
+              var img2 = new Image();
+              var imageTag2 = document.getElementById("carousel-img2");
+              img2.src = imageTag2.src;
+              img2.onload = function() {
+                if (img2.width / img2.height <= document.body.clientWidth / document.body.clientHeight) {
+                  imageTag2.style.width = document.body.clientWidth + "px";
+                } else {
+                  imageTag2.style.height = document.body.clientHeight + "px";
+                  imageTag2.style.marginLeft = -(document.body.clientHeight * img2.width / img2.height - document.body.clientWidth) / 2 + "px";
+                }
+              };
+            </script>
+
+            <div class="item">
+              <img id="carousel-img3" src="https://source.unsplash.com/collection/954550/1921x1081">
+            </div>
+
+            <script>
+              var img3 = new Image();
+              var imageTag3 = document.getElementById("carousel-img3");
+              img3.src = imageTag3.src;
+              img3.onload = function() {
+                if (img3.width / img3.height <= document.body.clientWidth / document.body.clientHeight) {
+                  imageTag3.style.width = document.body.clientWidth + "px";
+                } else {
+                  imageTag3.style.height = document.body.clientHeight + "px";
+                  imageTag3.style.marginLeft = -(document.body.clientHeight * img3.width / img3.height - document.body.clientWidth) / 2 + "px";
+                }
+              };
+            </script>
+
+            <div class="item">
+              <img id="carousel-img4" src="https://source.unsplash.com/collection/954550/1920x1082">
+            </div>
+
+            <script>
+              var img4 = new Image();
+              var imageTag4 = document.getElementById("carousel-img4");
+              img4.src = imageTag4.src;
+              img4.onload = function() {
+                if (img4.width / img4.height <= document.body.clientWidth / document.body.clientHeight) {
+                  imageTag4.style.width = document.body.clientWidth + "px";
+                } else {
+                  imageTag4.style.height = document.body.clientHeight + "px";
+                  imageTag4.style.marginLeft = -(document.body.clientHeight * img4.width / img4.height - document.body.clientWidth) / 2 + "px";
+                }
+              };
+            </script>
+
+            <div class="item">
+              <img id="carousel-img5" src="https://source.unsplash.com/collection/954550/1922x1080">
+            </div>
+
+            <script>
+              var img5 = new Image();
+              var imageTag5 = document.getElementById("carousel-img5");
+              img5.src = imageTag5.src;
+              img5.onload = function() {
+                if (img5.width / img5.height <= document.body.clientWidth / document.body.clientHeight) {
+                  imageTag5.style.width = document.body.clientWidth + "px";
+                } else {
+                  imageTag5.style.height = document.body.clientHeight + "px";
+                  imageTag5.style.marginLeft = -(document.body.clientHeight * img5.width / img5.height - document.body.clientWidth) / 2 + "px";
+                }
+              };
+            </script> -->
+
+          </div>
+
+        </div>
+      </section>
+
+      <div id="homelogo" class="homelogo" style="background: rgba(255,255,255,1);">
+        <div class="homelogoback" style="border: 1px solid #404040;">
+          <h1 style="font-family:initial;">워드프레스<br>코리아</h1>
+          <h3>www.wp-kr.com</h3>
+          <div class="link">
+            <a href="https://news.wp-talk.com/" id="logo" target="_blank">매거진</a> |
+            <a href="./kakao/" id="logo" target="_blank">카카오톡 문의</a>
+          </div>
+        </div>
+      </div>
+
+    </div>
+
+  </header>
+
+  <script src="./assets-main/js/homelogo.js"></script>
+  <script src="./assets-main/js/awslider.js"></script>
+
+</body>
+
 </html>
 <!-- Localized -->
