--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   <meta name="description" content="워드프레스 코리아 온라인 서비스 - WP-KR.COM">
   <meta name="keywords" content="워드프레스, 코리아, 한국, 테마, 플러그인, 호스팅, 워드프레스톡, 커스텀, 커스터마이징, 대행사, 커뮤니티, WordPress, WP, Theme, Plugin, Item, Child Theme">
   <meta property="og:title" content="워드프레스 코리아 온라인 서비스 - WP-KR.COM">
-  <meta property="og:url" content="워드프레스 코리아 온라인 서비스 - WP-KR.COM">
-  <meta property="og:site_name" content="워드프레스 코리아 온라인 서비스 - WP-KR.COM">
   <meta property="og:description" content="워드프레스 코리아 온라인 서비스 - WP-KR.COM">
+  <meta property="og:url" content="https://www.wp-kr.com/">
+  <meta property="og:site_name" content="워드프레스코리아">
   <meta property="og:type" content="website">
 
   <script src="./assets-main/js/jquery-3.1.1.min.js"></script>
