--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
       <div id="homelogo" class="homelogo" style="background: rgba(255,255,255,1);">
         <div class="homelogoback" style="border: 1px solid #404040;">
           <h1 style="font-family:initial;">워드프레스<br>코리아</h1>
-          <h3>www.wp-kr.com</h3>
+          <h3 style="white-space:nowrap;">www.wp-kr.com</h3>
           <div class="link">
             <a href="https://news.wp-talk.com/" id="logo" target="_blank">매거진</a> |
             <a href="./kakao/" id="logo" target="_blank">카카오톡 문의</a>
