--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <!-- <meta http-equiv="refresh" content="0; URL=https://www.wp-data.com/kr/"> -->
   <!-- <meta name="robots" content="noindex, nofollow"> -->
-  <title>워드프레스 코리아 온라인 서비스 - WP-KR.COM</title>
+  <title>워드프레스웹 코리아 온라인 서비스 - WP-KR.COM</title>
   <link rel="shortcut icon" type="image/x-icon" href="./../assets/img/favicon.ico"/>
-  <meta name="description" content="워드프레스 코리아 온라인 서비스 - WP-KR.COM">
+  <meta name="description" content="워드프레스웹 코리아 온라인 서비스 - WP-KR.COM">
   <meta name="keywords" content="워드프레스, 코리아, 한국, 테마, 플러그인, 호스팅, 워드프레스톡, 커스텀, 커스터마이징, 대행사, 커뮤니티, WordPress, WP, Theme, Plugin, Item, Child Theme">
-  <meta property="og:title" content="워드프레스 코리아 온라인 서비스 - WP-KR.COM">
-  <meta property="og:description" content="워드프레스 코리아 온라인 서비스 - WP-KR.COM">
+  <meta property="og:title" content="워드프레스웹 코리아 온라인 서비스 - WP-KR.COM">
+  <meta property="og:description" content="워드프레스웹 코리아 온라인 서비스 - WP-KR.COM">
   <meta property="og:url" content="https://www.wp-kr.com/">
   <meta property="og:site_name" content="워드프레스코리아">
   <meta property="og:type" content="website">
@@ -171,7 +171,7 @@
 
       <div id="homelogo" class="homelogo" style="background: rgba(255,255,255,1);">
         <div class="homelogoback" style="border: 1px solid #404040;">
-          <h1 style="font-family:initial;">워드프레스<br>코리아</h1>
+          <h1 style="font-family:initial;">워드프레스웹<br>코리아</h1>
           <h3 style="white-space:nowrap;">www.wp-kr.com</h3>
           <div class="link">
             <a href="https://news.wp-talk.com/" id="logo" target="_blank">매거진</a> |
