--- a/fb/index.html
+++ b/fb/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <meta http-equiv="refresh" content="0; URL=https://www.facebook.com/wptalk">
+    <meta http-equiv="refresh" content="0; URL=https://www.facebook.com/namanmol.wordpress/">
     <!-- <meta name="robots" content="noindex, nofollow"> -->
     <title>페이스북(Facebook) - 워드프레스 코리아(WP-KR.COM)</title>
 		<link rel="shortcut icon" type="image/x-icon" href="./../assets/img/favicon.ico"/>
