--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
           <h1 style="font-family:initial;">워드프레스웹<br>코리아</h1>
           <h3 style="white-space:nowrap;">www.wp-kr.com</h3>
           <div class="link">
-            <a href="https://news.wp-talk.com/" id="logo" target="_blank">매거진</a> |
+            <a href="https://news.wp-kr.com/" id="logo" target="_blank">매거진</a> |
             <a href="./kakao/" id="logo" target="_blank">카카오톡 문의</a>
           </div>
         </div>
