--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <!-- <meta http-equiv="refresh" content="0; URL=https://www.wp-data.com/kr/"> -->
+  <meta http-equiv="refresh" content="0; URL=https://news.wp-kr.com/">
   <!-- <meta name="robots" content="noindex, nofollow"> -->
   <title>워드프레스웹 코리아 온라인 서비스 - WP-KR.COM</title>
   <link rel="shortcut icon" type="image/x-icon" href="./../assets/img/favicon.ico"/>
@@ -45,147 +45,6 @@
 </head>
 
 <body>
-
-  <header id="header">
-
-    <div id="intrologo" class="intro-logo" style="background-position:center; background-repeat:no-repeat; background-image: url(); background-size: auto 100%;">
-
-      <section class="awSlider">
-        <div class="carousel slide carousel-fade " data-ride="carousel">
-
-          <!-- Wrapper for slides -->
-          <div class="carousel-inner">
-
-            <div class="item active">
-              <img id="carousel-img0" src="https://hellotblog.files.wordpress.com/2019/11/wptalk-ferdinand-stohr-149422-unsplash-1444x710.jpg">
-            </div>
-
-            <script>
-              var img0 = new Image();
-              var imageTag0 = document.getElementById("carousel-img0");
-              img0.src = imageTag0.src;
-              img0.onload = function() {
-                if (img0.width / img0.height <= document.body.clientWidth / document.body.clientHeight) {
-                  imageTag0.style.width = document.body.clientWidth + "px";
-                } else {
-                  imageTag0.style.height = document.body.clientHeight + "px";
-                  imageTag0.style.marginLeft = -(document.body.clientHeight * img0.width / img0.height - document.body.clientWidth) / 2 + "px";
-                }
-              };
-            </script>
-
-            <!-- <div class="item">
-              <img id="carousel-img1" src="https://source.unsplash.com/collection/954550/1920x1081">
-            </div>
-
-            <script>
-              var img1 = new Image();
-              var imageTag1 = document.getElementById("carousel-img1");
-              img1.src = imageTag1.src;
-              img1.onload = function() {
-                if (img1.width / img1.height <= document.body.clientWidth / document.body.clientHeight) {
-                  imageTag1.style.width = document.body.clientWidth + "px";
-                } else {
-                  imageTag1.style.height = document.body.clientHeight + "px";
-                  imageTag1.style.marginLeft = -(document.body.clientHeight * img1.width / img1.height - document.body.clientWidth) / 2 + "px";
-                }
-              };
-            </script>
-
-            <div class="item">
-              <img id="carousel-img2" src="https://source.unsplash.com/collection/954550/1921x1080">
-            </div>
-
-            <script>
-              var img2 = new Image();
-              var imageTag2 = document.getElementById("carousel-img2");
-              img2.src = imageTag2.src;
-              img2.onload = function() {
-                if (img2.width / img2.height <= document.body.clientWidth / document.body.clientHeight) {
-                  imageTag2.style.width = document.body.clientWidth + "px";
-                } else {
-                  imageTag2.style.height = document.body.clientHeight + "px";
-                  imageTag2.style.marginLeft = -(document.body.clientHeight * img2.width / img2.height - document.body.clientWidth) / 2 + "px";
-                }
-              };
-            </script>
-
-            <div class="item">
-              <img id="carousel-img3" src="https://source.unsplash.com/collection/954550/1921x1081">
-            </div>
-
-            <script>
-              var img3 = new Image();
-              var imageTag3 = document.getElementById("carousel-img3");
-              img3.src = imageTag3.src;
-              img3.onload = function() {
-                if (img3.width / img3.height <= document.body.clientWidth / document.body.clientHeight) {
-                  imageTag3.style.width = document.body.clientWidth + "px";
-                } else {
-                  imageTag3.style.height = document.body.clientHeight + "px";
-                  imageTag3.style.marginLeft = -(document.body.clientHeight * img3.width / img3.height - document.body.clientWidth) / 2 + "px";
-                }
-              };
-            </script>
-
-            <div class="item">
-              <img id="carousel-img4" src="https://source.unsplash.com/collection/954550/1920x1082">
-            </div>
-
-            <script>
-              var img4 = new Image();
-              var imageTag4 = document.getElementById("carousel-img4");
-              img4.src = imageTag4.src;
-              img4.onload = function() {
-                if (img4.width / img4.height <= document.body.clientWidth / document.body.clientHeight) {
-                  imageTag4.style.width = document.body.clientWidth + "px";
-                } else {
-                  imageTag4.style.height = document.body.clientHeight + "px";
-                  imageTag4.style.marginLeft = -(document.body.clientHeight * img4.width / img4.height - document.body.clientWidth) / 2 + "px";
-                }
-              };
-            </script>
-
-            <div class="item">
-              <img id="carousel-img5" src="https://source.unsplash.com/collection/954550/1922x1080">
-            </div>
-
-            <script>
-              var img5 = new Image();
-              var imageTag5 = document.getElementById("carousel-img5");
-              img5.src = imageTag5.src;
-              img5.onload = function() {
-                if (img5.width / img5.height <= document.body.clientWidth / document.body.clientHeight) {
-                  imageTag5.style.width = document.body.clientWidth + "px";
-                } else {
-                  imageTag5.style.height = document.body.clientHeight + "px";
-                  imageTag5.style.marginLeft = -(document.body.clientHeight * img5.width / img5.height - document.body.clientWidth) / 2 + "px";
-                }
-              };
-            </script> -->
-
-          </div>
-
-        </div>
-      </section>
-
-      <div id="homelogo" class="homelogo" style="background: rgba(255,255,255,1);">
-        <div class="homelogoback" style="border: 1px solid #404040;">
-          <h1 style="font-family:initial;">워드프레스웹<br>코리아</h1>
-          <h3 style="white-space:nowrap;">www.wp-kr.com</h3>
-          <div class="link">
-            <a href="https://news.wp-kr.com/" id="logo" target="_blank">매거진</a> |
-            <a href="./kakao/" id="logo" target="_blank">카카오톡 문의</a>
-          </div>
-        </div>
-      </div>
-
-    </div>
-
-  </header>
-
-  <script src="./assets-main/js/homelogo.js"></script>
-  <script src="./assets-main/js/awslider.js"></script>
 
 </body>
 
