--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
   <script src="./assets-main/js/jquery-3.1.1.min.js"></script>
   <script src="./assets-main/js/bootstrap.js"></script>
+  <script data-ad-client="ca-pub-1087484447886876" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
   <link rel="stylesheet" href="./assets-main/css/style.css">
   <link rel="stylesheet" href="./assets-main/css/fonts.css">
