--- a/basic/index.html
+++ b/basic/index.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <meta http-equiv="refresh" content="0; URL=https://www.facebook.com/namanmol.wordpress/">
+    <meta http-equiv="refresh" content="0; URL=https://news.wp-kr.com/wordpress-faq-for-users/">
     <!-- <meta name="robots" content="noindex, nofollow"> -->
-    <title>페이스북(Facebook) - 워드프레스웹코리아(WP-KR.COM)</title>
+    <title>워드프레스 기초 상식 및 핵심 원리 - 워드프레스웹코리아(WP-KR.COM)</title>
 		<link rel="shortcut icon" type="image/x-icon" href="./../assets/img/favicon.ico"/>
     <!-- Global site tag (gtag.js; WP-KR.COM) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-154119635-1"></script>
