--- a/kakao/index.html
+++ b/kakao/index.html
@@ -4,10 +4,8 @@
     <meta charset="utf-8" />
     <meta http-equiv="refresh" content="0; URL=https://pf.kakao.com/_Pxlmxjj">
     <!-- <meta name="robots" content="noindex, nofollow"> -->
-    <title>카카오톡 문의 - 워드프레스 코리아(WP-KR.COM)</title>
+    <title>카카오톡 문의 - 워드프레스웹코리아(WP-KR.COM)</title>
 		<link rel="shortcut icon" type="image/x-icon" href="./../assets/img/favicon.ico"/>
-    <meta name="description" content="카카오톡 문의 - 워드프레스 코리아(WP-KR.COM)">
-    <meta name="keywords" content="워드프레스, 코리아, 한국, 테마, 플러그인, 호스팅, 워드프레스톡, 커스텀, 커스터마이징, 대행사, 커뮤니티, WordPress, WP, Theme, Plugin, Item, Child Theme">
     <!-- Global site tag (gtag.js; WP-KR.COM) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-154119635-1"></script>
     <script>
