--- a/naver-blog/add/index.html
+++ b/naver-blog/add/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="refresh" content="0; URL=https://section.blog.naver.com/connect/PopConnectBuddyAddForm.nhn?blogId=wp-kr">
-    <!-- <meta name="robots" content="noindex, nofollow"> -->
-    <title>네이버 블로그 - 워드프레스웹코리아(WP-KR.COM)</title>
+    <meta name="robots" content="noindex, nofollow">
+    <title>네이버 블로그 이웃 추가 - 워드프레스웹코리아(WP-KR.COM)</title>
 		<link rel="shortcut icon" type="image/x-icon" href="./../assets/img/favicon.ico"/>
     <!-- Global site tag (gtag.js; WP-KR.COM) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-154119635-1"></script>
