--- a/bad-lessons/index.html
+++ b/bad-lessons/index.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <meta http-equiv="refresh" content="0; URL=https://section.blog.naver.com/connect/PopConnectBuddyAddForm.nhn?blogId=wp-kr">
+    <meta http-equiv="refresh" content="0; URL=https://blog.naver.com/wp-kr/221995728727">
     <!-- <meta name="robots" content="noindex, nofollow"> -->
-    <title>네이버 블로그 - 워드프레스웹코리아(WP-KR.COM)</title>
+    <title>워드프레스 엉터리 교육/강의/유튜브/블로그의 특징 및 추천 학습 방법 - 워드프레스웹코리아(WP-KR.COM)</title>
 		<link rel="shortcut icon" type="image/x-icon" href="./../assets/img/favicon.ico"/>
     <!-- Global site tag (gtag.js; WP-KR.COM) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-154119635-1"></script>
