--- a/download/plugin/contact-form-7/index.html
+++ b/download/plugin/contact-form-7/index.html
@@ -69,7 +69,7 @@
               <!-- Brand Logo -->
               <a class="navbar-brand site-title d-inline mx-auto" href="./../">
                 <img src="https://hellotblog.files.wordpress.com/2019/12/wordpress-logo-10-100x100-1.png" id="brand-image" class="d-inline-block align-middle mr-1" style="width:20px;" alt="">
-                wp-test-sandbox
+                WordPress
               </a>
             </div>
 
