--- a/download/plugin/index.html
+++ b/download/plugin/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="robots" content="noindex, nofollow">
+    <title>워드프레스웹 코리아 온라인 서비스 - WP-KR.COM</title>
     <link rel="shortcut icon" type="image/x-icon" href="./assets/img/favicon.ico" />
     <link rel="stylesheet" type="text/css" href="./assets/css/bootstrap/4.3.1/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="./assets/css/all.css">
@@ -69,7 +70,7 @@
               <!-- Brand Logo -->
               <a class="navbar-brand site-title d-inline mx-auto" href="./">
                 <img src="https://hellotblog.files.wordpress.com/2019/12/wordpress-logo-10-100x100-1.png" id="brand-image" class="d-inline-block align-middle mr-1" style="width:20px;" alt="">
-                wp-test-sandbox
+                WordPress
               </a>
             </div>
 
