--- a/search/plugin/index.html
+++ b/search/plugin/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="robots" content="noindex, nofollow">
-    <title>워드프레스웹 코리아 온라인 서비스 - WP-KR.COM</title>
+    <title>WordPress Plugins | WordPress.org</title>
     <link rel="shortcut icon" type="image/x-icon" href="./assets/img/favicon.ico" />
     <link rel="stylesheet" type="text/css" href="./assets/css/bootstrap/4.3.1/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="./assets/css/all.css">
