--- a/app/kakaochat/index.html
+++ b/app/kakaochat/index.html
@@ -183,7 +183,7 @@
                   human_check = $form.find( "input[name='human-check']" ).val(),
                   // url = $form.attr( "action" );
                   url = "https://update.wp-data.com/app/kakaochat/";
-                  msg_success = '<span class="text-success"><i class="fas fa-check"></i> 이메일이 발송되었습니다.<br><br>이메일이 도착하지 않는다면, 스팸 메일함을 확인해 보세요</span>';
+                  msg_success = '<span class="text-success"><i class="fas fa-check"></i> 이메일이 발송되었습니다.<br>이메일이 도착하지 않았다면, 스팸 메일함을 확인해 보세요</span>';
                   msg_failure = '<span class="text-danger"><i class="fas fa-check"></i> 오류가 발생하였습니다. 관리자에게 문의해 주세요</span>';
 
               var datas = {
@@ -195,7 +195,7 @@
               var posting = $.post( url, datas );
 
               posting.done(function( data ) {
-
+                console.log(data);
                 $( "#email" ).val('');
                 $( "#result" ).html( msg_success );
 
