--- a/app/kakaochat/index.html
+++ b/app/kakaochat/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="robots" content="noindex, nofollow">
-    <title>워드프레스웹코리아 카카오톡 오픈 채팅방 입장 코드 - WP-KR.COM</title>
+    <title>카카오톡 오픈 채팅방 입장 코드 - 워드프레스웹코리아(WP-KR.COM)</title>
     <link rel="shortcut icon" type="image/x-icon" href="./assets/img/favicon.ico" />
     <link rel="stylesheet" type="text/css" href="./assets/css/bootstrap/4.3.1/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="./assets/css/all.css">
