--- a/app/kakaochat/index.html
+++ b/app/kakaochat/index.html
@@ -211,7 +211,7 @@
         </div> <!-- container -->
       </div> <!-- .site-content -->
 
-      <div class="footer mt-2 bg-light shadow" style="position:fixed; bottom:0; width:100%;">
+      <div class="footer fixed-bottom mt-2 bg-white shadow">
 
         <!-- <div class="container business-info pt-4 text-center" style="font-size:0.9rem; opacity:0.7;">
         </div> -->
