--- a/app/kakaochat/index.html
+++ b/app/kakaochat/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="robots" content="noindex, nofollow">
-    <title>카카오톡 오픈 채팅방 입장 코드 - 워드프레스웹코리아(WP-KR.COM)</title>
+    <title>카카오톡 오픈 채팅방 입장 코드 - 워드프레스AI코리아(WP-KR.COM)</title>
     <link rel="shortcut icon" type="image/x-icon" href="./assets/img/favicon.ico" />
     <link rel="stylesheet" type="text/css" href="./assets/css/bootstrap/4.3.1/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="./assets/css/all.css">
@@ -104,7 +104,7 @@
           <ul id="menu-main" class="navbar-nav mr-auto pt-3">
             <li id="menu-item-66" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-66 nav-item">
               <a href="https://news.wp-kr.com/" target="_blank" class="nav-link">
-                워드프레스웹코리아 매거진
+                워드프레스AI코리아 매거진
               </a>
             </li>
             <li id="menu-item-66" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-66 nav-item">
@@ -145,7 +145,7 @@
 
           <div class="pt-3 pb-4 text-center">
             <h1 style="font-size:1.2rem;" class="font-weight-bold">
-              워드프레스웹코리아 카카오톡 오픈 채팅방
+              워드프레스AI코리아 카카오톡 오픈 채팅방
             </h1>
             <a href="https://www.wp-kr.com/kakaochat/" target="_blank" style="text-decoration:none;">
               www.wp-kr.com/kakaochat/
