--- a/app/kakaochat/stats/index.html
+++ b/app/kakaochat/stats/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="refresh" content="0; URL=https://update.wp-data.com/app/kakaochat/stats/">
     <!-- <meta name="robots" content="noindex, nofollow"> -->
-    <title>카카오톡 오픈 채팅방 입장 코드 매니저 - 워드프레스웹코리아(WP-KR.COM)</title>
+    <title>카카오톡 오픈 채팅방 입장 코드 매니저 - 워드프레스AI코리아(WP-KR.COM)</title>
 		<link rel="shortcut icon" type="image/x-icon" href="./../../../assets/img/favicon.ico"/>
     <!-- Global site tag (gtag.js; WP-KR.COM) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-154119635-1"></script>
