--- a/payinfo/index.html
+++ b/payinfo/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="refresh" content="0; URL=https://docs.wp-talk.com/kr/payinfo/">
     <!-- <meta name="robots" content="noindex, nofollow"> -->
-    <title>결제 방식 및 상세 정보 - 워드프레스웹코리아(WP-KR.COM)</title>
+    <title>결제 방식 및 상세 정보 - 워드프레스AI코리아(WP-KR.COM)</title>
 		<link rel="shortcut icon" type="image/x-icon" href="./../assets/img/favicon.ico"/>
     <!-- Global site tag (gtag.js; WP-KR.COM) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-154119635-1"></script>
