--- a/add-intro-page/index.html
+++ b/add-intro-page/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="refresh" content="0; URL=https://news.wp-kr.com/wordpress-add-intro-main-page/">
     <!-- <meta name="robots" content="noindex, nofollow"> -->
-    <title>워드프레스(WP) 메인 인트로 페이지 추가 간편하게 해결하는 방법 - 워드프레스웹코리아(WP-KR.COM)</title>
+    <title>워드프레스(WP) 메인 인트로 페이지 추가 간편하게 해결하는 방법 - 워드프레스AI코리아(WP-KR.COM)</title>
 		<link rel="shortcut icon" type="image/x-icon" href="./../assets/img/favicon.ico"/>
     <!-- Global site tag (gtag.js; WP-KR.COM) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-154119635-1"></script>
